tests/__snapshots__/validation-reporters-wrong-option-value-type-stderr.snap.txt
Error: Value for the 'reporters' option must be a list.

  1 | {
  2 |   "reporters": "./tstyche-reporter.js",
    |                ~~~~~~~~~~~~~~~~~~~~~~~
  3 |   "testFileMatch": [
  4 |     "examples/*.test.*"
  5 |   ]

      at ./tstyche.config.json:2:16

